[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/audio_settings/title.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/GemunuLibre-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://rsc/audio_settings/AudioSettings.gd" type="Script" id=3]
[ext_resource path="res://rsc/return/Return.tscn" type="PackedScene" id=4]
[ext_resource path="res://rsc/bg/Bg.tscn" type="PackedScene" id=5]
[ext_resource path="res://rsc/sfx/SFX.tscn" type="PackedScene" id=6]
[ext_resource path="res://rsc/musics/Musics.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0.572549, 0.172549, 0.639216, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 2
outline_color = Color( 0.913725, 0.282353, 0.113725, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.87451, 0.733333, 0.733333, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.756863, 0.419608, 0.419608, 1 )

[sub_resource type="DynamicFont" id=5]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="AudioSettings" type="Node"]
script = ExtResource( 3 )

[node name="Bg" parent="." instance=ExtResource( 5 )]
color = Color( 0.309804, 0.407843, 0.388235, 1 )

[node name="SoundFinished" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="MusicFinished" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Audios" parent="." instance=ExtResource( 6 )]

[node name="Return" parent="." instance=ExtResource( 4 )]
scene_path = "res://rsc/settings/Settings.tscn"

[node name="Musics" parent="." instance=ExtResource( 7 )]

[node name="Playing" parent="Musics" index="0"]
volume_db = -25.0

[node name="Music" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 262.0
margin_bottom = -146.0
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="Music"]
margin_right = 500.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
text = "MUSIC"
align = 1
valign = 1

[node name="MusicSlider" type="HSlider" parent="Music"]
margin_top = 85.0
margin_right = 500.0
margin_bottom = 101.0
min_value = -80.0
max_value = 15.0

[node name="Sound" type="Label" parent="Music"]
margin_top = 131.0
margin_right = 500.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 2 )
text = "SOUND"
align = 1
valign = 1

[node name="SoundSlider" type="HSlider" parent="Music"]
margin_top = 216.0
margin_right = 500.0
margin_bottom = 232.0
min_value = -80.0
max_value = 15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetMusic" type="Button" parent="Music"]
margin_top = 262.0
margin_right = 500.0
margin_bottom = 312.0
rect_min_size = Vector2( 0, 50 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "RESET MUSIC"

[node name="ResetSound" type="Button" parent="Music"]
margin_top = 342.0
margin_right = 500.0
margin_bottom = 392.0
rect_min_size = Vector2( 0, 50 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = SubResource( 5 )
text = "RESET SOUND"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 40.0
margin_right = 500.0
margin_bottom = 290.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="TextureRect" parent="CenterContainer"]
margin_left = 25.0
margin_right = 475.0
margin_bottom = 250.0
texture = ExtResource( 1 )
[connection signal="timeout" from="SoundFinished" to="." method="_on_SoundFinished_timeout"]
[connection signal="timeout" from="MusicFinished" to="." method="_on_MusicFinished_timeout"]
[connection signal="value_changed" from="Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Music/SoundSlider" to="." method="_on_SoundSlider_value_changed"]
[connection signal="pressed" from="Music/ResetMusic" to="." method="_on_Music_pressed"]
[connection signal="pressed" from="Music/ResetSound" to="." method="_on_Sound_pressed"]

[editable path="Audios"]

[editable path="Musics"]
